# pymontrace

./: .gitignore  IDEA  Makefile  README  TODO  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-and-publish.yml  deploy-gh-pages.yaml  test.yml
c_src/: _tracebuffermodule.c  attacher.h  attacher_linux_64bit.c  attacher_linux_aarch64.c  attachermodule.c  darwin_64bit.c  darwin_arm64.c  mapbuffermodule.c
docs/: .gitignore  Makefile  SUMMARY.md  book.toml  command.md  internals_development.md  introduction.adoc  introduction.md  known-issues.md  programs-functions.md  programs-language.md  programs-probes.md  programs-special-variables.md  programs.md  quickstart.md  supported-platforms.md
examples/: flow-indent.sh  script_to_debug.py  time-bomb.sh  trace.py
hack/: bash-aarch64-priv.sh  bash-aarch64.sh  bash-amd64.sh  example.sh
integration_tests/: test_cli.py
integration_tests/targets/: modulo_loop.py
manual_tests/: README.md  mt_spawn_lots.py  mt_to_debug.py  repeat_attach_abuse.sh  test_clone.sh  test_debug_container.sh  test_fork.sh  threaded_server.py
src/pymontrace/: __init__.py  __main__.py  _mapbuffer.pyi  _tracebuffer.pyi  attacher.pyi  mapbuffer.py  probes.py  tracebuffer.py  tracee.py  tracer.py
tests/: test_pymontrace.py
tests/pymontrace/: test_attacher.py  test_attacher_interface.py  test_attacher_noroot.py  test_mapbuffer.py  test_tracebuffer.py  test_tracee.py  test_tracer.py
tests/pymontrace/tracee/: test_func_probe.py
