[project]
name        = "pymontrace"
description = "production safe low impact tracing"
version     = "0.1.0-dev"

dependencies = []

[project.optional-dependencies]
test = [
  "pytest       ~= 7.0",
  "flake8       ~= 7.0",
]
dev = [
  "black        ==23.12.1",
  "isort        ~= 5.0",
#  "maturin",
]

[project.scripts]
pymontrace = "pymontrace.__main__:cli_main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
]

#[tool.maturin]
#python-source = "src"
